<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.batman.volleyproject.DetailsActivity">

            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/loadingplaceholder" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorIcons"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="The Boss Baby(U/A)" />

            <TextView
                android:id="@+id/movie_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorIcons"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                tools:text="Tagline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/colorIcons"
                    android:text="@string/genre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movie_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    tools:text="Genre" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorIcons"
                    android:layout_weight="0.5"
                    android:text="@string/release_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    tools:text="Release Date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/colorIcons"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="Description"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/runtime"
                    android:textColor="@color/colorIcons"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movie_runtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    tools:text="Runtime" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/production"
                    android:textColor="@color/colorIcons"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movie_production_companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    tools:text="Companies" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/toolbar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/trailer_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_play_arrow_white_24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>
</FrameLayout>